# multi-agent

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  GETTING_STARTED.md  Prompt.md  README.md  _debug_gemini.py  _test_regex.py  _test_vue_pattern.py  _verify_fixes.py  fix.py  pyproject.toml
.claude/: settings.local.json
.github/: copilot-instructions.md
agents/: __init__.py  api_contract_agent.py  api_integration_agent.py  architect_agent.py  base_agent.py  build_verifier_agent.py  change_planner_agent.py  coder_agent.py  component_dag_agent.py  component_generator_agent.py  component_planner_agent.py  deploy_agent.py  design_parser_agent.py  integration_test_agent.py  patch_agent.py  plan_generator_agent.py  planner_agent.py  product_planner_agent.py  repository_analyzer_agent.py  reviewer_agent.py  security_agent.py  state_management_agent.py  test_agent.py  writer_agent.py
config/: __init__.py  settings.py
core/: __init__.py  agent_manager.py  agent_tools.py  api.py  architecture_approver.py  ast_extractor.py  checkpoint.py  circuit_breaker.py  cli.py  context_builder.py  coverage_runner.py  error_attributor.py  event_bus.py  file_lock_manager.py  import_validator.py  language.py  lifecycle_orchestrator.py  live_console.py  llm_client.py  llm_schema.py  mcp_client.py  models.py  observability.py  pipeline.py  pipeline_definition.py  pipeline_enhance.py  pipeline_executor.py  pipeline_frontend.py  pipeline_fullstack.py  pipeline_run.py  plan_approver.py  repository_manager.py  run_reporter.py  sandbox_orchestrator.py  state_machine.py  stub_generator.py  (+6 more)
(+51 files in other folders)
